Unify foundation page titles and headings
[fix bug 1309692]

--- a/bedrock/foundation/templates/foundation/annualreport/2009/a-competitive-world.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2009/a-competitive-world.html
@@ -6,11 +6,9 @@
 
 {% block page_title %}{{ _('State of Mozilla 2009 - A Competitive World') }}{% endblock %}
 
-{% block article_title %}
-  <header class="page-title">
-    <h1>{{ _('The State of Mozilla Annual Report, 2009') }}</h1>
-    <h2>{{ _('A Competitive World') }}</h2>
-  </header>
+{% block article_header %}
+    <h2>{{ _('The State of Mozilla Annual Report, 2009') }}</h2>
+    <p>{{ _('A Competitive World') }}</p>
 {% endblock %}
 
 {% block article %}
