--- a/bedrock/foundation/templates/foundation/annualreport/2009/sustainability.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2009/sustainability.html
@@ -6,11 +6,9 @@
 
 {% block page_title %}{{ _('State of Mozilla 2009 - Sustainability') }}{% endblock %}
 
-{% block article_title %}
-  <header class="page-title">
-    <h1>{{ _('The State of Mozilla Annual Report, 2009') }}</h1>
-    <h2>{{ _('Sustainability') }}</h2>
-  </header>
+{% block article_header %}
+  <h2>{{ _('The State of Mozilla Annual Report, 2009') }}</h2>
+  <p>{{ _('Sustainability') }}</p>
 {% endblock %}
 
 {% block article %}
