--- a/bedrock/foundation/templates/foundation/annualreport/2010/index.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2010/index.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('The State of Mozilla Annual Report, 2010') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('The State of Mozilla Annual Report, 2010') }}</h1>
+  {{ _('The State of Mozilla Annual Report, 2010') }}
 {% endblock %}
 
 {% block article %}
