--- a/bedrock/foundation/templates/foundation/annualreport/2010/people.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2010/people.html
@@ -6,11 +6,9 @@
 
 {% block page_title %}{{ _('The State of Mozilla Annual Report - People') }}{% endblock %}
 
-{% block article_title %}
-  <header class="page-title">
-    <h1>{{ _('The State of Mozilla Annual Report, 2010') }}</h1>
-    <h2>{{ _('People') }}</h2>
-  </header>
+{% block article_header %}
+  <h2>{{ _('The State of Mozilla Annual Report, 2010') }}</h2>
+  <p>{{ _('People') }}</p>
 {% endblock %}
 
 {% block article %}
