--- a/bedrock/foundation/templates/foundation/base-resp.html
+++ b/bedrock/foundation/templates/foundation/base-resp.html
@@ -38,7 +38,7 @@
       <div class="main-column">
         <header class="section-header">
         {% block article_header %}
-          <h2>{{ self.page_title() }}</h2>
+          <h2>{{ self.article_title() }}</h2>
         {% endblock %}
         </header>
         {% block article %}{% endblock %}
