--- a/bedrock/foundation/templates/foundation/documents/articles-of-incorporation.html
+++ b/bedrock/foundation/templates/foundation/documents/articles-of-incorporation.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Articles of Incorporation of M. F. Technologies') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ self.page_title() }}</h1>
+  {{ self.page_title() }}
 {% endblock %}
 
 {% block article %}
@@ -26,7 +26,7 @@
 
 <p>{{ _('(b) This Corporation is authorized to provide indemnification of agents (as defined in Section 317 of the California Corporations Code) through bylaw provisions, agreements with the agents, vote of shareholders or disinterested directors or otherwise, in excess of the indemnification otherwise permitted by Section 317 of the California Corporations Code, subject only to applicable limits set forth in Section 204 of the California Corporations Code with respect to actions for breach of duty to the Corporation and its shareholders.') }}</p>
 
-<p>{{ _('[THE REMAINDER OF THIS PAGE IS INTENTIONALLY LEFT BLANK]') }}</p> 
+<p>{{ _('[THE REMAINDER OF THIS PAGE IS INTENTIONALLY LEFT BLANK]') }}</p>
 
 <p>{{ _('IN WITNESS WHEREOF, the undersigned has executed these Articles of Incorporation.') }}</p>
 
