--- a/bedrock/foundation/templates/foundation/documents/mozilla-2006-financial-faq.html
+++ b/bedrock/foundation/templates/foundation/documents/mozilla-2006-financial-faq.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Mozilla 2006 Financial FAQ') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Mozilla 2006 Financial FAQ') }}</h1>
+  {{ _('Mozilla 2006 Financial FAQ') }}
 {% endblock %}
 
 {% block article %}
