--- a/bedrock/foundation/templates/foundation/feed-icon-guidelines/faq.html
+++ b/bedrock/foundation/templates/foundation/feed-icon-guidelines/faq.html
@@ -6,11 +6,9 @@
 
 {% block page_title %}{{ _('Feed Icon FAQ') }}{% endblock %}
 
-{% block article_title %}
-  <header class="page-title">
-    <h1>{{ _('Feed Icon Guidelines') }}</h1>
-    <h2>{{ _('Frequently Asked Questions') }}</h2>
-  </header>
+{% block article_header %}
+    <h2>{{ _('Feed Icon Guidelines') }}</h2>
+    <p>{{ _('Frequently Asked Questions') }}</p>
 {% endblock %}
 
 {% block article %}
