--- a/bedrock/foundation/templates/foundation/mocosc.html
+++ b/bedrock/foundation/templates/foundation/mocosc.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('About the Mozilla Corporation Steering Committee') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('About the Mozilla Corporation Steering Committee') }}</h1>
+  {{ _('About the Mozilla Corporation Steering Committee') }}
 {% endblock %}
 
 {% block article %}
