--- a/bedrock/foundation/templates/foundation/openwebfund/thanks.html
+++ b/bedrock/foundation/templates/foundation/openwebfund/thanks.html
@@ -9,7 +9,7 @@
 {% block page_title %}{{ _('Thank you') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Thank you for supporting the Mozilla Open Web Fund') }}</h1>
+  {{ _('Thank you for supporting the Mozilla Open Web Fund') }}
 {% endblock %}
 
 {% block article %}
