--- a/bedrock/foundation/templates/foundation/trademarks/community-edition-permitted-changes.html
+++ b/bedrock/foundation/templates/foundation/trademarks/community-edition-permitted-changes.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Permitted Changes to Legacy Community Edition Builds') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Permitted Changes to Legacy Community Edition Builds') }}</h1>
+  {{ _('Permitted Changes to Legacy Community Edition Builds') }}
 {% endblock %}
 
 {% block article %}
