--- a/bedrock/foundation/templates/foundation/trademarks/distribution-policy.html
+++ b/bedrock/foundation/templates/foundation/trademarks/distribution-policy.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Distribution Trademark Policy') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Mozilla Trademark Policy for Distribution Partners') }}</h1>
+  {{ _('Mozilla Trademark Policy for Distribution Partners') }}
 {% endblock %}
 
 {% block article %}
