--- a/bedrock/foundation/templates/foundation/trademarks/list.html
+++ b/bedrock/foundation/templates/foundation/trademarks/list.html
@@ -9,7 +9,7 @@
 {% block body_class %}trademarks sand{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('List of Mozilla Trademarks') }}</h1>
+  {{ _('List of Mozilla Trademarks') }}
 {% endblock %}
 
 {% block article %}
