--- a/bedrock/foundation/templates/foundation/trademarks/poweredby/faq.html
+++ b/bedrock/foundation/templates/foundation/trademarks/poweredby/faq.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Powered by Mozilla FAQ') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Powered by Mozilla FAQ') }}</h1>
+  {{ _('Powered by Mozilla FAQ') }}
 {% endblock %}
 
 {% block article %}
