--- a/bedrock/foundation/templates/foundation/about.html
+++ b/bedrock/foundation/templates/foundation/about.html
@@ -9,7 +9,7 @@
 {% set body_id = "about" %}
 
 {% block article_title %}
-  {{ _('About the Mozilla Foundation') }}
+  {{ _('About the Foundation') }}
 {% endblock %}
 
 {% block article %}
