--- a/bedrock/foundation/templates/foundation/annualreport/2009/broadening-our-scope.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2009/broadening-our-scope.html
@@ -6,11 +6,9 @@
 
 {% block page_title %}{{ _('State of Mozilla 2009 - Broadening Our Scope') }}{% endblock %}
 
-{% block article_title %}
-  <header class="page-title">
-    <h1>{{ _('The State of Mozilla Annual Report, 2009') }}</h1>
-    <h2>{{ _('Broadening Our Scope') }}</h2>
-  </header>
+{% block article_header %}
+  <h2>{{ _('The State of Mozilla Annual Report, 2009') }}</h2>
+  <p>{{ _('Broadening Our Scope') }}</p>
 {% endblock %}
 
 {% block article %}
