--- a/bedrock/foundation/templates/foundation/annualreport/2009/faq.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2009/faq.html
@@ -6,11 +6,9 @@
 
 {% block page_title %}{{ _('Mozilla 2009 Financial FAQ') }}{% endblock %}
 
-{% block article_title %}
-  <header class="page-title">
-    <h1>{{ _('The State of Mozilla Annual Report, 2009') }}</h1>
-    <h2>{{ _('Financial FAQ') }}</h2>
-  </header>
+{% block article_header %}
+  <h2>{{ _('The State of Mozilla Annual Report, 2009') }}</h2>
+  <p>{{ _('Financial FAQ') }}</p>
 {% endblock %}
 
 {% block article %}
