--- a/bedrock/foundation/templates/foundation/annualreport/2010/opportunities.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2010/opportunities.html
@@ -6,11 +6,9 @@
 
 {% block page_title %}{{ _('The State of Mozilla Annual Report - Opportunities') }}{% endblock %}
 
-{% block article_title %}
-  <header class="page-title">
-    <h1>{{ _('The State of Mozilla Annual Report, 2010') }}</h1>
-    <h2>{{ _('Opportunities and Challenges') }}</h2>
-  </header>
+{% block article_header %}
+  <h2>{{ _('The State of Mozilla Annual Report, 2010') }}</h2>
+  <p>{{ _('Opportunities and Challenges') }}</p>
 {% endblock %}
 
 {% block article %}
