--- a/bedrock/foundation/templates/foundation/documents/bylaws-amendment-2.html
+++ b/bedrock/foundation/templates/foundation/documents/bylaws-amendment-2.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Certificate of Second Amendment to the Bylaws of Mozilla Corporation') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ self.page_title() }}</h1>
+  {{ self.page_title() }}
 {% endblock %}
 
 {% block article %}
