--- a/bedrock/foundation/templates/foundation/documents/index.html
+++ b/bedrock/foundation/templates/foundation/documents/index.html
@@ -9,7 +9,7 @@
 {% set body_id = "documents" %}
 
 {% block article_title %}
-  {{ self.page_title() }}
+  {{ _('Public Documents') }}
 {% endblock %}
 
 {% block article %}
