--- a/bedrock/foundation/templates/foundation/feed-icon-guidelines/index.html
+++ b/bedrock/foundation/templates/foundation/feed-icon-guidelines/index.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Feed Icon Guidelines') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Feed Icon Guidelines') }}</h1>
+  {{ _('Feed Icon Guidelines') }}
 {% endblock %}
 
 {% block article %}
