--- a/bedrock/foundation/templates/foundation/licensing.html
+++ b/bedrock/foundation/templates/foundation/licensing.html
@@ -9,7 +9,7 @@
 {% set body_id = "licensing" %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Mozilla Licensing Policies') }}</h1>
+  {{ _('Licensing & Trademarks') }}
 {% endblock %}
 
 {% block article %}
