--- a/bedrock/foundation/templates/foundation/licensing/binary-components/rationale.html
+++ b/bedrock/foundation/templates/foundation/licensing/binary-components/rationale.html
@@ -6,11 +6,9 @@
 
 {% block page_title %}{{ _('Mozilla Licensing Policies - Binary Components') }}{% endblock %}
 
-{% block article_title %}
-  <header class="page-title">
-    <h1>{{ _('Mozilla Licensing Policies') }}</h1>
-    <h2>{{ _('Binary Components') }}</h2>
-  </header>
+{% block article_header %}
+  <h2>{{ _('Mozilla Licensing Policies') }}</h2>
+  <p>{{ _('Binary Components') }}</p>
 {% endblock %}
 
 {% block article %}
