--- a/bedrock/foundation/templates/foundation/licensing/website-content.html
+++ b/bedrock/foundation/templates/foundation/licensing/website-content.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Mozilla.org Site Licensing Policies') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Mozilla.org Site Licensing Policies') }}</h1>
+  {{ _('Mozilla.org Site Licensing Policies') }}
 {% endblock %}
 
 {% block article %}
