--- a/bedrock/foundation/templates/foundation/moco.html
+++ b/bedrock/foundation/templates/foundation/moco.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('About the Mozilla Corporation') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('About the Mozilla Corporation') }}</h1>
+  {{ _('About the Mozilla Corporation') }}
 {% endblock %}
 
 {% block article %}
