--- a/bedrock/foundation/templates/foundation/openwebfund/more.html
+++ b/bedrock/foundation/templates/foundation/openwebfund/more.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('More About the Open Web Fund') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('More About the Open Web Fund') }}</h1>
+  {{ _('More About the Open Web Fund') }}
 {% endblock %}
 
 {% block article %}
