--- a/bedrock/foundation/templates/foundation/trademarks/community-edition-policy.html
+++ b/bedrock/foundation/templates/foundation/trademarks/community-edition-policy.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Termination of the Community Edition Builds') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Termination of the Community Edition Builds') }}</h1>
+  {{ _('Termination of the Community Edition Builds') }}
 {% endblock %}
 
 {% block article %}
