--- a/bedrock/foundation/templates/foundation/trademarks/faq.html
+++ b/bedrock/foundation/templates/foundation/trademarks/faq.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Mozilla Trademark Policy FAQ') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Mozilla Trademark Policy FAQ') }}</h1>
+  {{ _('Mozilla Trademark Policy FAQ') }}
 {% endblock %}
 
 {% block article %}
