--- a/bedrock/foundation/templates/foundation/trademarks/index.html
+++ b/bedrock/foundation/templates/foundation/trademarks/index.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Mozilla Foundation Trademark Policy') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Mozilla Foundation Trademark Policy') }}</h1>
+  {{ _('Mozilla Foundation Trademark Policy') }}
 {% endblock %}
 
 {% block article %}
