--- a/bedrock/foundation/templates/foundation/trademarks/l10n-website-policy.html
+++ b/bedrock/foundation/templates/foundation/trademarks/l10n-website-policy.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Localization Team Web Sites') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Mozilla Trademark Policy for Web Sites Created by Localization Teams') }}</h1>
+  {{ _('Mozilla Trademark Policy for Web Sites Created by Localization Teams') }}
 {% endblock %}
 
 {% block article %}
