--- a/bedrock/foundation/templates/foundation/trademarks/policy.html
+++ b/bedrock/foundation/templates/foundation/trademarks/policy.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Mozilla Trademark Policy') }}{% endblock %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('Mozilla Trademark Policy') }}</h1>
+  {{ _('Mozilla Trademark Policy') }}
 {% endblock %}
 
 {% block article %}
