--- a/media/css/foundation/annual2011.less
+++ b/media/css/foundation/annual2011.less
@@ -895,6 +895,10 @@ body.noscroll {
 /* Mobile layout: 320px */
 @media only screen and (max-width: @breakTablet) {
 
+  #wrapper {
+    width: 320px;
+  }
+
   #main-content {
     width: 280px;
   }
