--- a/media/css/mozorg/home/home.scss
+++ b/media/css/mozorg/home/home.scss
@@ -34,15 +34,15 @@ body {
 
 // Header
 #masthead {
-    background: $color-mozred-bright;
-    color: #fff;
+    background: #ff8c8e;
+    color: #000;
 
     .content {
         padding: 51px 20px 0;
     }
 
     .masthead-logo {
-        background: $color-mozred-bright;
+        background: #ff8c8e;
         height: 30px;
         left: 0;
         margin: 0;
@@ -64,7 +64,7 @@ body {
 
 @media #{$mq-tablet} {
     #masthead {
-        background: $color-mozred-bright;
+        background: #ff8c8e;
         padding: 0;
 
         .content {
@@ -83,7 +83,7 @@ body {
         padding: 15px 0;
 
         li {
-            border-right: 1px solid #fff;
+            border-right: 1px solid #000;
 
             &:last-child {
                 border-right: 0;
@@ -94,7 +94,7 @@ body {
         a,
         a:hover,
         a:focus {
-            color: #fff;
+            color: #000;
         }
     }
 }
@@ -846,6 +846,9 @@ main {
     }
 
     .logo a {
-        @include at2x('/media/img/sandstone/footer-mozilla-white.png', 93px, 24px);
+        background: url('/media/img/pebbles/moz-wordmark-light-reverse.svg') no-repeat;
+        @include background-size(100px, 32px);
+        height: 32px;
+        width: 100px;
     }
 }
