--- a/bedrock/mozorg/templates/mozorg/home/includes/nav.html
+++ b/bedrock/mozorg/templates/mozorg/home/includes/nav.html
@@ -1,8 +1,12 @@
 {% if not logo_src %}
-  {% set logo_src = static('img/pebbles/moz-wordmark-light-reverse.svg') %}
+  {% if switch('mozorg-home-brand-announce') %}
+    {% set logo_src = static('img/pebbles/moz-wordmark-light-reverse.svg') %}
+  {% else %}
+    {% set logo_src = static('img/home/2016/mozilla-wordmark.svg') %}
+  {% endif %}
 {% endif %}
 
-<header class="section masthead" id="masthead">
+<header class="section masthead {% if switch('mozorg-home-brand-announce') %}rebrand{% endif %}" id="masthead">
   <div class="content">
   {% if is_home %}
     <h1 class="masthead-logo">
