Add Q26 about physical distribution

--- a/bedrock/mozorg/templates/mozorg/mpl/2.0/faq.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/2.0/faq.html
@@ -128,6 +128,9 @@
         <h3 id="full-copy-only">Q25: What happens if someone doesn't use the per-file boilerplate, and just ships a copy of the full MPL 2 with their code?</h3>
         <p>The code is licensed under the plain MPL 2. It is <u>not</u> considered Incompatible with Secondary Licenses. Making code Incompatible with Secondary Licenses requires an active choice on the part of the licensor; it is not the default. The notice in Exhibit B is not considered "attached" merely by being present as the Exhibit B of a copy of the full MPL 2.</p>
         <p>The only exception is if the code used to be straight MPL 1.1 and was upgraded to MPL 2, in which case it would be Incompatible with Secondary Licenses (Sec. 1.5 b).</p>
-    </section>
+
+        <h3 id="physical-distribution">Q26: I would like to distribute source code by using a courier or other physical mechanisms. Is this "reasonable" for purposes of meeting my obligations under Section 3.2(a)?</h3>
+        <p>In modern software development, distribution happens almost exclusively over the internet, because of the low cost and convenience. While the MPL allows for alternatives when necessary, in general any mechanism (such as a courier) that adds cost and complexity without a specific, necessary purpose is not reasonable, and so does not comply with the requirements of Section 3.2(a).</p>
+  </section>
 </div>
 {% endblock %}
