--- a/bedrock/firefox/templates/firefox/new/break-free/scene2.html
+++ b/bedrock/firefox/templates/firefox/new/break-free/scene2.html
@@ -8,6 +8,10 @@
 
 {% block body_class %}scene-2{% endblock %}
 
+{% block string_data %}
+  data-tracking-pixel={{ settings.TRACKING_PIXEL_URL }}
+{% endblock %}
+
 {% block content %}
 <div class="main-content content">
   <div id="download-button-wrapper-desktop">
@@ -37,7 +41,7 @@
 {% endblock %}
 
 {% block js %}
-  {% if switch('flashtalking') %}
+  {% if switch('tracking-pixel') %}
     {% javascript 'firefox_new_pixel' %}
   {% endif %}
   {% javascript 'firefox_new_scene2' %}
