Bug 1322959 - IHR Privacy-Security page, fix syntax error (unwrapped string)

--- a/bedrock/mozorg/templates/mozorg/internet-health/privacy-security.html
+++ b/bedrock/mozorg/templates/mozorg/internet-health/privacy-security.html
@@ -228,7 +228,7 @@
         </div>
 
         <div class="topic-action-moz">
-          <h3 class="topic-action-title">{{ ('What Mozilla is doing about cyber security') }}</h3>
+          <h3 class="topic-action-title">{{ _('What Mozilla is doing about cyber security') }}</h3>
           <ol>
             <li>
             {% trans
