[fix Bug 1332678] fixed CSS linting errors

--- a/media/css/thunderbird/landing.less
+++ b/media/css/thunderbird/landing.less
@@ -6,7 +6,7 @@
 
 .sky #outer-wrapper {
     background: #eaeff2;
-    background: -webkit-gradient(radial, center center, 0px, center center, 60%, color-stop(0%,rgba(234,239,242,.9)), color-stop(60%,rgba(212,221,228,.5))),
+    background: -webkit-gradient(radial, center center, 0, center center, 60%, color-stop(0%,rgba(234,239,242,.9)), color-stop(60%,rgba(212,221,228,.5))),
                 -webkit-linear-gradient(top, rgba(202,225,244,1) 0%, rgba(125,185,232,0) 100%);
     background: -webkit-radial-gradient(center, ellipse cover, rgba(234,239,242,1) 0%, rgba(212,221,228,.4) 60%),
                 -webkit-linear-gradient(top, rgba(202,225,244,1) 0%, rgba(125,185,232,0) 100%);
@@ -22,7 +22,7 @@
         top: 0;
         bottom: 0;
         width: 100%;
-        background: url(/media/img/thunderbird/landing/bg-noise.png);
+        background: url('/media/img/thunderbird/landing/bg-noise.png');
     }
 }
 
