[fix bug 1332675] Fix CSS linting errors in Sandstone and Pebbles

--- a/media/css/sandstone/oldIE.less
+++ b/media/css/sandstone/oldIE.less
@@ -281,12 +281,12 @@ img {
 
 // Color schemes
 .sand #outer-wrapper {
-    background: #f5f1e8 url(/media/img/sandstone/bg-gradient-sand.png) repeat-x;
+    background: #f5f1e8 url("/media/img/sandstone/bg-gradient-sand.png") repeat-x;
 }
 
 .sky {
     #outer-wrapper {
-        background: #eee url(/media/img/sandstone/bg-gradient-sky.png) repeat-x;
+        background: #eee url("/media/img/sandstone/bg-gradient-sky.png") repeat-x;
     }
 
     a:link,
@@ -324,7 +324,7 @@ img {
     color: #fff;
 
     #outer-wrapper {
-        background: #04020b url(/media/img/sandstone/bg-space.png) repeat-x;
+        background: #04020b url("/media/img/sandstone/bg-space.png") repeat-x;
     }
 
     h1, h2, h3, h4, h5, h6 {
@@ -395,7 +395,7 @@ img {
             .current {
                 background-position: 50% 0;
                 background-repeat: no-repeat;
-                background-image: url(/media/img/sandstone/menu-current.png);
+                background-image: url("/media/img/sandstone/menu-current.png");
             }
             a:link,
             a:visited {
