--- a/media/css/sandstone/lib.less
+++ b/media/css/sandstone/lib.less
@@ -87,18 +87,18 @@
 
 // Button shadows
 
-@shadowPartBottom:      0px 1px 0px 0px rgba(0, 0, 0, 0.2);
-@shadowPartBottomInset: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.3);
-@shadowPartHover:       inset 0px 12px 24px 2px saturate(@buttonBlue, 10%);
+@shadowPartBottom:      0 1px 0 0 rgba(0, 0, 0, 0.2);
+@shadowPartBottomInset: inset 0 -1px 0 0 rgba(0, 0, 0, 0.3);
+@shadowPartHover:       inset 0 12px 24px 2px saturate(@buttonBlue, 10%);
 @shadowPartFocusRing:   0 0 0 2px rgba(73,173,227,0.4);
 
 @buttonShadow:          @shadowPartBottom, @shadowPartBottomInset;
 @buttonShadowHover:     @shadowPartBottom, @shadowPartBottomInset, @shadowPartHover;
 @buttonShadowFocus:     @shadowPartBottom, @shadowPartBottomInset, @shadowPartHover, @shadowPartFocusRing;
 
-@buttonShadowActive:     inset 0px 2px 0px 0px rgba(0, 0, 0, 0.2),
-                         inset 0px 12px 24px 6px rgba(0,0,0,0.2),
-                         inset 0px 0px 2px 2px rgba(0,0,0,0.2);
+@buttonShadowActive:     inset 0 2px 0 0 rgba(0, 0, 0, 0.2),
+                         inset 0 12px 24px 6px rgba(0,0,0,0.2),
+                         inset 0 0 2px 2px rgba(0,0,0,0.2);
 
 @borderColor: #d6d6d6;
 
@@ -373,7 +373,7 @@
 .button-hover-box-shadow(@color: #ffffff) {
     @shadow:  @shadowPartBottom,
               @shadowPartBottomInset,
-              inset 0px 12px 24px 2px saturate(@color, 10%);
+              inset 0 12px 24px 2px saturate(@color, 10%);
     .box-shadow(@shadow);
 }
 
@@ -522,32 +522,32 @@
 .aurora-bars(@pageBgColor: @mozIDBlue, @auroraStartColor: #00a7e0) {
     background-color: @pageBgColor;
     background-image: none;
-    background-image: linear-gradient(to bottom, fade(@pageBgColor, 0%) 0px, fade(@pageBgColor, 0%) 100px, @pageBgColor 450px, @pageBgColor),
+    background-image: linear-gradient(to bottom, fade(@pageBgColor, 0%) 0, fade(@pageBgColor, 0%) 100px, @pageBgColor 450px, @pageBgColor),
         repeating-linear-gradient(118deg,
-            fade(@pageBgColor, 0%) 0px, @auroraStartColor 550px,
+            fade(@pageBgColor, 0%) 0, @auroraStartColor 550px,
             fade(@pageBgColor, 0%) 550px, @auroraStartColor 800px,
             fade(@pageBgColor, 0%) 800px, @auroraStartColor 950px);
 
     @media (max-width: @breakDesktop) {
-        background-image: linear-gradient(to bottom, fade(@pageBgColor, 0%) 0px, fade(@pageBgColor, 0%) 100px, @pageBgColor 350px, @pageBgColor),
+        background-image: linear-gradient(to bottom, fade(@pageBgColor, 0%) 0, fade(@pageBgColor, 0%) 100px, @pageBgColor 350px, @pageBgColor),
             repeating-linear-gradient(118deg,
-                fade(@pageBgColor, 0%) 0px, @auroraStartColor 410px,
+                fade(@pageBgColor, 0%) 0, @auroraStartColor 410px,
                 fade(@pageBgColor, 0%) 410px, @auroraStartColor 600px,
                 fade(@pageBgColor, 0%) 600px, @auroraStartColor 720px);
     }
 
     @media (max-width: @breakTablet) {
-        background-image: linear-gradient(to bottom, fade(@pageBgColor, 0%) 0px, fade(@pageBgColor, 0%) 100px, @pageBgColor 300px, @pageBgColor),
+        background-image: linear-gradient(to bottom, fade(@pageBgColor, 0%) 0, fade(@pageBgColor, 0%) 100px, @pageBgColor 300px, @pageBgColor),
             repeating-linear-gradient(118deg,
-                fade(@pageBgColor, 0%) 0px, @auroraStartColor 320px,
+                fade(@pageBgColor, 0%) 0, @auroraStartColor 320px,
                 fade(@pageBgColor, 0%) 320px, @auroraStartColor 480px,
                 fade(@pageBgColor, 0%) 480px, @auroraStartColor 570px);
     }
 
     @media (max-width: @breakMobileLandscape) {
-        background-image: linear-gradient(to bottom, fade(@pageBgColor, 0%) 0px, fade(@pageBgColor, 0%) 100px, @pageBgColor 250px, @pageBgColor),
+        background-image: linear-gradient(to bottom, fade(@pageBgColor, 0%) 0, fade(@pageBgColor, 0%) 100px, @pageBgColor 250px, @pageBgColor),
             repeating-linear-gradient(118deg,
-                fade(@pageBgColor, 0%) 0px, @auroraStartColor 200px,
+                fade(@pageBgColor, 0%) 0, @auroraStartColor 200px,
                 fade(@pageBgColor, 0%) 200px, @auroraStartColor 320px,
                 fade(@pageBgColor, 0%) 320px, @auroraStartColor 380px);
     }
