--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -23,7 +23,7 @@ body {
     position: relative;
     border-top: 2px solid #fff;
     min-width: 992px;
-    background: #f9f9f9 url(/media/img/sandstone/bg-stone.png) 0 0 repeat-x;
+    background: #f9f9f9 url("/media/img/sandstone/bg-stone.png") 0 0 repeat-x;
 }
 
 #wrapper {
@@ -52,17 +52,17 @@ a.more {
 }
 
 .sand #outer-wrapper {
-    background: #f5f1e8 url(/media/img/sandstone/bg-gradient-sand.png) repeat-x;
-    background: url(/media/img/sandstone/bg-gradient-sand.png) repeat-x,
-                url(/media/img/sandstone/bg-sand.png) repeat,
+    background: #f5f1e8 url("/media/img/sandstone/bg-gradient-sand.png") repeat-x;
+    background: url("/media/img/sandstone/bg-gradient-sand.png") repeat-x,
+                url("/media/img/sandstone/bg-sand.png") repeat,
                 #f5f1e8;
 }
 
 .sky {
     #outer-wrapper {
-        background: #eee url(/media/img/sandstone/bg-gradient-sky.png) repeat-x;
-        background: url(/media/img/sandstone/bg-gradient-sky.png) repeat-x,
-                    url(/media/img/sandstone/grain.png) repeat,
+        background: #eee url("/media/img/sandstone/bg-gradient-sky.png") repeat-x;
+        background: url("/media/img/sandstone/bg-gradient-sky.png") repeat-x,
+                    url("/media/img/sandstone/grain.png) repeat,
                     #eee;
     }
 
@@ -81,7 +81,7 @@ a.more {
     color: #fff;
 
     #outer-wrapper {
-        background: #04020b url(/media/img/sandstone/bg-space.png) repeat-x;
+        background: #04020b url("/media/img/sandstone/bg-space.png) repeat-x;
     }
 
     a {
@@ -474,7 +474,7 @@ px      68    160    252    344    436    528    620    712    804    896    */
             .current {
                 background-position: 50% 0;
                 background-repeat: no-repeat;
-                background-image: url(/media/img/sandstone/menu-current.png);
+                background-image: url("/media/img/sandstone/menu-current.png");
             }
 
 
