--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -22,7 +22,7 @@ body {
 #outer-wrapper {
     position: relative;
     border-top: 2px solid #fff;
-    background: #f9f9f9 url(/media/img/sandstone/bg-stone.png) 0 0 repeat-x;
+    background: #f9f9f9 url("/media/img/sandstone/bg-stone.png") 0 0 repeat-x;
 }
 
 #wrapper {
@@ -58,17 +58,17 @@ a.more {
 }
 
 .sand #outer-wrapper {
-    background: #f5f1e8 url(/media/img/sandstone/bg-gradient-sand.png) repeat-x;
-    background: url(/media/img/sandstone/bg-gradient-sand.png) repeat-x,
-                url(/media/img/sandstone/bg-sand.png) repeat,
+    background: #f5f1e8 url("/media/img/sandstone/bg-gradient-sand.png") repeat-x;
+    background: url("/media/img/sandstone/bg-gradient-sand.png") repeat-x,
+                url("/media/img/sandstone/bg-sand.png") repeat,
                 #f5f1e8;
 }
 
 .sky {
     #outer-wrapper {
-        background: #eee url(/media/img/sandstone/bg-gradient-sky.png) repeat-x;
-        background: url(/media/img/sandstone/bg-gradient-sky.png) repeat-x,
-                    url(/media/img/sandstone/grain.png) repeat,
+        background: #eee url("/media/img/sandstone/bg-gradient-sky.png") repeat-x;
+        background: url("/media/img/sandstone/bg-gradient-sky.png") repeat-x,
+                    url("/media/img/sandstone/grain.png") repeat,
                     #eee;
     }
 
@@ -88,7 +88,7 @@ a.more {
     color: #fff;
 
     #outer-wrapper {
-        background: #04020b url(/media/img/sandstone/bg-space.png) repeat-x;
+        background: #04020b url("/media/img/sandstone/bg-space.png") repeat-x;
     }
 
     a {
@@ -646,7 +646,7 @@ label.error {
             .current {
                 background-position: 50% 0;
                 background-repeat: no-repeat;
-                background-image: url(/media/img/sandstone/menu-current.png);
+                background-image: url("/media/img/sandstone/menu-current.png");
             }
 
 
@@ -724,7 +724,7 @@ label.error {
     position: absolute;
     bottom: -40px;
     left: 0;
-    background: url(/media/img/mission/title-banner-shadow.png) no-repeat;
+    background: url("/media/img/mission/title-banner-shadow.png") no-repeat;
 }
 
 html[dir="rtl"] {
@@ -1245,7 +1245,7 @@ nav.menu-bar {
             width: 32px;
             height: 32px;
             /*margin: -3px 0 0 -3px;*/
-            background: no-repeat center top url(/media/img/sandstone/icn-menu.png);
+            background: no-repeat center top url("/media/img/sandstone/icn-menu.png");
             text-indent: -999em;
             overflow: hidden;
             cursor: pointer;
@@ -1434,7 +1434,7 @@ nav.menu-bar {
         }
 
         #nav-main-menu a.submenu-item {
-            background: 94% 50% no-repeat url(/media/img/sandstone/arrow-go.png);
+            background: 94% 50% no-repeat url("/media/img/sandstone/arrow-go.png");
         }
 
         #nav-main-menu a:hover,
@@ -1453,8 +1453,8 @@ nav.menu-bar {
         #nav-main-menu a.submenu-item:hover,
         #nav-main-menu a.submenu-item:focus,
         #nav-main-menu a.submenu-item:active {
-            background-image: url(/media/img/sandstone/arrow-go.png), -webkit-linear-gradient(top, #43a6e2, #247ac1);
-            background-image: url(/media/img/sandstone/arrow-go.png), linear-gradient(to bottom, #43a6e2, #247ac1);
+            background-image: url("/media/img/sandstone/arrow-go.png"), -webkit-linear-gradient(top, #43a6e2, #247ac1);
+            background-image: url("/media/img/sandstone/arrow-go.png"), linear-gradient(to bottom, #43a6e2, #247ac1);
         }
 
         #nav-main-menu li.first > a {
@@ -1494,7 +1494,7 @@ nav.menu-bar {
         display: block;
         width: 28px;
         height: 10px;
-        background: no-repeat url(/media/img/sandstone/menu-point.png);
+        background: no-repeat url("/media/img/sandstone/menu-point.png");
         position: absolute;
         left: 22px;
         top: -10px;
