Bug 1335040: Remove gigabit content

--- a/bedrock/foundation/templates/foundation/leadership-network.html
+++ b/bedrock/foundation/templates/foundation/leadership-network.html
@@ -49,7 +49,7 @@
     {{ _('The Mozilla Leadership Network pursues our goals through five key initiatives, which are reflected in each hub:')}}
     <ul>
       <li>{% trans url_weblit_module="https://thimbleprojects.org/chadsansing/75057/#overview" %}<em>Curricula & Training.</em> We provide free and open curricula and training programs to help leaders develop the skills they need to ensure the next wave of access, inclusion and opportunity online. Example: <a href="{{ url_weblit_module }}">Web Literacy Training Module</a>{% endtrans %}</li>
-      <li>{% trans url_gigabit=url('gigabit.gigabit') %}<em>Partnerships.</em> We initiate and grow partnerships that enable Mozilla, our community and our allies to maximize their impact. Example: <a href="{{ url_gigabit }}">Gigabit Community Fund</a>{% endtrans %}</li>
+      <li>{% trans url_gigabit="https://learning.mozilla.org/gigabit/" %}<em>Partnerships.</em> We initiate and grow partnerships that enable Mozilla, our community and our allies to maximize their impact. Example: <a href="{{ url_gigabit }}">Gigabit Community Fund</a>{% endtrans %}</li>
       <li>{% trans url_mozFest="https://mozillafestival.org" %}<em>Convening.</em> We bring members of the Mozilla Leadership Network together, to learn from one another, exchange ideas and join forces. Example: <a href="{{ url_mozFest }}">MozFest</a>{% endtrans %}</li>
       <li>{% trans url_fellowships="https://science.mozilla.org/programs/fellowships" %}<em>Membership.</em> Members join because they share Mozilla’s vision, and stay because of the strong, diverse community and unique professional development opportunities the network provides. Example: <a href="{{ url_fellowships }}">Fellowships</a>{% endtrans %}</li>
     </ul>
